# Python-Basics-Magus-Mage-learning

./: Reg_Ex.py  abstraction.py  classesInheritence.py  dictSetTule.py  employer.py  exception_lambda_listcomp.py  exceptonhandling.py  functions.py  list_practice.py  multiprocessing_pool.py  multiprocessing_practice.py  multithreadng_practice.py  packagetesting.py  polymorphism.py  sceneriopractice.py  variables.py
core python/: Reg_Ex.py  abstraction.py  dictSetTule.py  employer.py  exception_lambda_listcomp.py  list_practice.py  polymorphism.py
files in python/: examplefile.xlsx  filespractice.py  notebook.ipynb  test.txt
my_package/: __init__.py  module1.py  module2.py
my_package2/: pyproject.toml  run_greet.py
my_package2/my_package2/: my_module.py
numpy learning/: creation.py  numpyFunctions.ipynb  numpy_excercise.ipynb  numpypart2.ipynb
pandas in python/: MeltPivotTable.ipynb  MergeAndConcate.ipynb  Test_new.csv  Test_new1.csv  Test_new2.csv  arthematic_pandas.ipynb  dataStructures_pandas.ipynb  pandas_practiceProblems.ipynb  read_csv_pandas.ipynb  temp_data.csv
python files/: empty_file.xlsx  excel_with_list.xlsx  excel_with_list1.xlsx  filespractice.py  json_py.py  logging_py.py  subprocess_py.py  test.json  test.txt
random practice/: dict.ipynb
