[tool.poetry]
name = "my-package2"
version = "0.1.0"
description = ""
authors = ["ItsAmmarTariq <ammarch935@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
my_script = "my_package2.my_module:greet"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
